--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-51RG294D26"></script>
-    <script>
+    <script async type="module" src="https://www.googletagmanager.com/gtag/js?id=G-51RG294D26"></script>
+    <script >
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
